# fastapi_logging_with_elastic

./: main.py  pyproject.toml
middleware/: logging_middleware.py
utils/: logger_with_elastic.py
